--- a/uas/index.html
+++ b/uas/index.html
@@ -5,9 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyCourse</title>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="./css/sadf.css">
-    <script src="./js/halo.js"></script>
 </head>
 <body>
     <header>
@@ -34,8 +32,8 @@
                 <h2><span>Course Children</span></h2>
                 <p>Best Course in the world-from Indonesia-International Best Course-Trust MyCourse to Course your Children</p>
                     <ul>
-                        <li><a href="">Login</a></li>
-                        <li class="sign"><a href="">Sign Up</a></li>
+                        <li><a href="login_form.php">Login</a></li>
+                        <li class="sign"><a href="signup_form.php">Sign Up</a></li>
                     </ul>
             </div>
             <div class="img">
@@ -50,7 +48,7 @@
        <!-- kontener 2 kotak   -->
         <section id="cource" class="blok">
             <!-- dalam block -->
-            <div class="halo">
+            <div class="halo reveal">
                 <div class="kontener-judul">
                     <h1>Course</h1>
                 </div>
@@ -71,7 +69,7 @@
         <!-- kotak 3 -->
         <section id="tutor" class="blok2">
             <!-- kontener dalam blok2 -->
-            <div class="hallo2">
+            <div class="hallo2 reveal">
                 <div class="kontener-judul2">
                     <h1>Our Tutor</h1>
                 </div>
@@ -84,8 +82,8 @@
                 <img src="./img/Asset 1@3x.png" alt="">
             </div>
         </section>
-        <section>
-            <div class="kata">
+        <section class="kata-kata">
+            <div class="kata reveal">
                     <div class="halatas">
                         <h2>Ready to</h2>
                         <span><h3>get started ?</h3></span>
@@ -94,14 +92,14 @@
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam maiores dicta ex fugit molestias repellat. Soluta sed et suscipit quaerat temporibus totam officiis doloribus voluptate quidem, ipsum, ea commodi laudantium.</p>
                     </div>
                     <div class="signup">
-                        <h3><a href=""> Sign up for free</a></h3>
+                        <h3><a href="signup.html"> Sign up for free</a></h3>
                     </div>
             </div>
         </section>
     </main>
 
     <footer>
-        <section class="footer">
+        <section class="footer reveal">
             <div class="blok3">
                 <h3>MyCourse</h3>
                 <div class="atas">
@@ -114,5 +112,9 @@
             </div>
         </section>
     </footer>
+
+  <script src="js/halo.js">
+
+  </script>
 </body>
 </html>
