--- a/uas/materiloginnn.html
+++ b/uas/materiloginnn.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Materi</title>
-    <link rel="stylesheet" href="/uas/css/materii.css">
+    <link rel="stylesheet" href="/uas/css/materilogin.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 </head>
 <body>
@@ -15,31 +15,30 @@
             <div class="kotak">
                 <!-- Navbar kontener -->
                 <nav class="navbar">
-                        <a href="index.html" class="logo">MyCourse</a>
+                    <a href="index.html" class="logo">MyCourse</a>
                     <div class="extra">
                         <ul>
                             <li><a href="#cource">Materi</a></li>
                             <li><a href="#support">Support Us</a></li>
-                            <li><a href="#About">About Us</a></li>
+                            <li><a href="#about">About Us</a></li>
                         </ul>
                     </div>
                 </nav>
                  <!-- section 1 -->
                  <!-- Deskripsi Awal -->
-            <section id="home" class="home">
-                <div class="judul">
-                    <h1>Materi Untukmu</h1>
-                    <h2 class="besar">Tersedia <span>Disini</span></h2>
-                    <p>Bersama MyCourse, kalian dapat mengakses konten materi pelajaran yang ingin kalian pelajari. Kalian juga dapat mengirim kopi untuk menjadi semangat untuk kami dalam mengembangkan Web ini.</p>
+                <section id="home" class="home">
+                    <div class="judul">
+                        <h1>Materi Untukmu</h1>
+                        <h2 class="besar">Tersedia <span>Disini</span></h2>
+                        <p>Bersama MyCourse, kalian dapat mengakses konten materi pelajaran yang ingin kalian pelajari. Kalian juga dapat mengirim kopi untuk menjadi semangat untuk kami dalam mengembangkan Web ini.</p>
                         <ul>
                             <li><a href="#support">Support Us</a></li>
-                            <li class="sign"><a href="signup_form.php">Sign Up</a></li>
                         </ul>
-                </div>
-                <div class="img">
-                    <img src="./img/Asset 3@3x.png">
-                </div>
-            </section>
+                    </div>
+                    <div class="img">
+                        <img src="./img/Asset 3@3x.png">
+                    </div>
+                </section>
             </div>
         </div>
     </header>
@@ -80,30 +79,29 @@
         </section>
         <section  id="cource">
             <div class="container2">
-                <h1>Daftar Materi</h1>
-                <br>
-                    <ul>
-                        <li class="a">
-                            <i class="fas fa-calculator"></i>
-                            <a href="login_form.php"><p>Matematika</p></a>
-                        </li>
-                        <li class="b">
-                            <i class="fas fa-regular fa-dna"></i>
-                            <a href="login_form.php"><p>IPA(Sains)</p></a>
-                        </li>
-                        <li class="c">
-                            <i class="fas fa-regular fa-user"></i>
-                            <a href="login_form.php"><p>IPS(Social)</p></a>
-                        </li>
-                        <li class="d">
-                            <i class="fas fa-regular fa-book"></i>
-                            <a href="login_form.php"><p>Bahasa Indonesia</p></a>    
-                        </li>
-                        <li class="e">
-                            <i class="fas fa-solid fa-bookmark"></i>
-                            <a href="login_form.php"><p>Bahasa Inggris</p></a>
-                        </li>
-                    </ul>
+                <h1>Daftar Materi</h1><br>
+                <ul>
+                    <li class="a">
+                        <i class="fas fa-calculator"></i>
+                        <a href="/uas/materi/Matematika/math.html"><p>Matematika</p></a>
+                    </li>
+                    <li class="b">
+                        <i class="fas fa-regular fa-dna"></i>
+                        <a href="/uas/materi/IPA/ipa.html"><p>IPA(Sains)</p></a>
+                    </li>
+                    <li class="c">
+                        <i class="fas fa-regular fa-user"></i>
+                        <a href="/uas/materi/IPS/ips.html"><p>IPS(Social)</p></a>
+                    </li>
+                    <li class="d">
+                        <i class="fas fa-regular fa-book"></i>
+                        <a href="/uas/materi/Bahasa/bindo.html"><p>Bahasa Indonesia</p></a>    
+                    </li>
+                    <li class="e">
+                        <i class="fas fa-solid fa-bookmark"></i>
+                        <a href="/uas/materi/Bahasaeng/english.html"><p>Bahasa Inggris</p></a>
+                    </li>
+                </ul>
             </div>
         </section>
         <section class="tambalan">
@@ -114,47 +112,45 @@
         <section id="support">
             <div class="kotak1">
                 <!-- kontener dalam blok2 -->
-            <div class="container3 reveal">
-                <div class="kontener-judul2">
-                    <h1>Support Us</h1>
-                    <h2>Traktir kami kopi!</h2>
-                    <h3 class="pp">"Kopi anda sangat berguna untuk pengembangan aplikasi ini"</h3>
-                    <br>
-                </div>
-                <div class="kotak-pilihan">
-                    <ul>
-                        <li>
-                            <h3>Paket Kopi</h3>
-                            <h2>Bikin Happy</h2>
-                            <p>cus gift</p>
-                            <h1>Rp 5.000</h1>
-                            <p>untuk ngopi semalam</p>
-                            <br>
-                            <p class="traktir"><a href="">Traktir kuy!</a></p> 
-                        </li>
-                        <li>
-                            <h3>Paket Singa</h3>
-                            <h2>Bikin Gembira</h2>
-                            <p>cus gift</p>
-                            <h1>Rp 50.000</h1>
-                            <p>untuk makan sehari</p>
-                            <br>
-                            <p class="traktir"><a href="">Traktir kuy!</a></p> 
-                        </li>
-                        <li>
-                            <h3>Paket Pulau</h3>
-                            <h2>WAAAUUUUW</h2>
-                            <p>cus gift</p>
-                            <h1>Rp 500.000</h1>
-                            <p>MAKASIH SULTAN</p>
-                            <br>
-                            <p class="traktir"><a href="">Traktir kuy!</a></p> 
-                        </li>
-                    </ul>
+                <div class="container3 reveal">
+                    <div class="kontener-judul2">
+                        <h1>Support Us</h1>
+                        <h2>Traktir kami kopi!</h2>
+                        <h3 class="pp">"Kopi anda sangat berguna untuk pengembangan aplikasi ini"</h3><br>
+                    </div>
+                    <div class="kotak-pilihan">
+                        <ul>
+                            <li>
+                                <h3>Paket Kopi</h3>
+                                <h2>Bikin Happy</h2>
+                                <p>cus gift</p>
+                                <h1>Rp 5.000</h1>
+                                <p>untuk ngopi semalam</p>
+                                <br>
+                                <p class="traktir"><a href="">Traktir kuy!</a></p> 
+                            </li>
+                            <li>
+                                <h3>Paket Singa</h3>
+                                <h2>Bikin Gembira</h2>
+                                <p>cus gift</p>
+                                <h1>Rp 50.000</h1>
+                                <p>untuk makan sehari</p>
+                                <br>
+                                <p class="traktir"><a href="">Traktir kuy!</a></p> 
+                            </li>
+                            <li>
+                                <h3>Paket Pulau</h3>
+                                <h2>WAAAUUUUW</h2>
+                                <p>cus gift</p>
+                                <h1>Rp 500.000</h1>
+                                <p>MAKASIH SULTAN</p>
+                                <br>
+                                <p class="traktir"><a href="">Traktir kuy!</a></p> 
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-            </div>
-            
         </section>
         <footer>
             <section class="footer reveal">
@@ -178,11 +174,15 @@
                             <li><a href="/uas/materi pelajaran/Bahasa Inggris/english.html">Bahasa Inggris</a></li>
                         </ul>
                     </div>
-                    <div class="atas" id="About">
+                    <div class="iatas" id="about">
                         <h3>About</h3>
-                        <p>MyCourse <br>
-                           Jl. Pondok Benowo Indah <br> Blok CS No. 32, Surabaya <br>
-                           Phone : (+62) 89652895078 <br> Email : daftar@mycourse.com</p>
+                        <p>MyCourse</p><br>
+                        <ul>
+                            <li>Jl. Pondok Benowo Indah</li>
+                            <li>Blok CS No. 32, Surabaya</li>
+                            <li>Phone : (+62) 89652895078</li>
+                            <li>Email : daftar@mycourse.com</li>
+                        </ul>
                     </div>
                 </div>
             </section>
